@@ -3,5 +3,6 @@
  * Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported
  */
 
-#timeline {
+#timeline .toolbar p span {
+	vertical-align: top;
 	}
