@@ -34,7 +34,10 @@
 		<div id="timeline" class="page">
 			<div class="toolbar">
 				<a href="#accounts" class="button"></a>
-				<p></p>
+				<p>
+					<span></span>
+					<a href="http://twitter.com/" class="direct" target="_blank"><img src="img/buttons/twitter.png" /></a>
+				</p>
 
 				<div class="clearer"></div>
 			</div>
