@@ -1,4 +1,5 @@
 0.41 (in development):
+	+ Ability to view the home timeline directly on twitter.com
 
 0.40:
 	* Better links handling with middle mouse key or with Meta key pressed in OS X
